# Rust-CEP-APIs

./: .gitignore  Cargo.toml  LICENSE  README.md  env.example
examples/: simple_certificate_submission.rs
src/: lib.rs
tests/: e2e_tests.rs  integration_tests.rs
