[package]
name = "circular_enterprise_apis"
version = "0.1.0"
edition = "2024"

[lib]
name = "circular_enterprise_apis"
path = "src/lib.rs"

[[example]]
name = "simple_certificate_submission"
path = "examples/simple_certificate_submission.rs"

[dependencies]
chrono = "0.4.41"
hex = "0.4.3"
lazy_static = "1.5.0"
parking_lot = "0.12.4"
reqwest = { version = "0.12.22", features = ["json"] }
secp256k1 = "0.31.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sha2 = "0.10.9"
tokio = { version = "1.46.1", features = ["full"] }
dotenv = "0.15.0"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
httpmock = "0.7.0"
serde_json = "1.0.141"
tokio = "1.46.1"
